// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $4,500.00
  </h1>
</div>
`;

exports[`should render multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    10
     
    expenses
     totalling 
    $4,500.00
  </h1>
</div>
`;
